--- a/archive/2025_04.md
+++ b/archive/2025_04.md
@@ -245,7 +245,7 @@ struct TupleStruct<T: Config, U>(T::SomeType, U)
  fn query_delivery_fees(destination: VersionedLocation, message: VersionedXcm<()>, asset: VersionedAssetId) -> Result<VersionedAssets, XcmPaymentApiError> {
 			let fee_in_native = PolkadotXcm::query_delivery_fees(destination, message)?;`
 
-解决`XcmPaymentApi::query_delivery_fees()` 应允许使用自定义资产查询费用的问题：
+解决`XcmPaymentApi::query_delivery_fees()` 允许使用自定义资产查询费用的问题：
 - 函数签名目前是 `(destination: VersionedLocation, message: VersionedXcm<()>, asset: VersionedAssetId)`。并且在参数列表中，顺序似乎是从最后一个开始的。
   - 资产
   - 信息
